force-app/main/default/objects/Idea__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bugs</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>R&amp;D</fullName>
            </value>
            <value>
                <fullName>Sales/Opportunities</fullName>
            </value>
            <value>
                <fullName>UI</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>AI Marketing Agent</fullName>
            </value>
            <value>
                <fullName>MarTech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>