force-app/main/default/objects/Idea__c/fields/Current_Score__c.field-meta.xml
<CustomField>
    <fullName>Current_Score__c</fullName>
    <label>Current Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>