force-app/main/default/objects/Idea__c/fields/Idea_Space__c.field-meta.xml
<CustomField>
    <fullName>Idea_Space__c</fullName>
    <label>Idea Space</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IdeaForge</fullName>
            </value>
            <value>
                <fullName>OneAlgorithm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>