force-app/main/default/objects/Idea__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <length>20</length>
    <type>Text</type>
</CustomField>