force-app/main/default/objects/Idea__c/fields/Unlikes__c.field-meta.xml
<CustomField>
    <fullName>Unlikes__c</fullName>
    <label>Unlikes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>